--- a/index.html
+++ b/index.html
@@ -58,6 +58,26 @@
                         <template class="js-item__template">
                             <span class="trash-interface__item trash-item js-item__content"></span>
                         </template>
+                        <div class="trash-interface__answer trash-answer js-notification">
+                            <span class="trash-answer__notification is-right js-notification__right">
+                                <img
+                                    class="base-icon"
+                                    src="images/icons/right.png"
+                                    width="20"
+                                    height="20"
+                                    alt="Правильный ответ!"
+                                />
+                            </span>
+                            <span class="trash-answer__notification is-wrong js-notification__wrong">
+                                <img
+                                    class="base-icon"
+                                    src="images/icons/wrong.png"
+                                    width="20"
+                                    height="20"
+                                    alt="Неправильный ответ"
+                                />
+                            </span>
+                        </div>
                     </div>
                 </div>
                 <button class="trash-interface__start js-game__start" type="button">Начать!</button>
