--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/index.scss" />
 </head>
 <body>
-    <div class="trash-interface js-game">
+    <div class="container trash-interface js-game">
         <header class="trash-interface__header">
             <h1 class="trash-interface__title">
             Выбери правильный бак для сортировки мусора!
