fix notification display fix item size jumps

--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
                           </g>
                         </svg>
                     </div>
-                    <div class="trash-interface__item-wrapper js-item">
-                        <template class="js-item__template">
-                            <span class="trash-interface__item trash-item js-item__content"></span>
-                        </template>
+                    <div class="trash-interface__game-container">
+                        <div class="trash-interface__item-wrapper js-item">
+                            <template class="js-item__template">
+                                <span class="trash-interface__item trash-item js-item__content"></span>
+                            </template>
+                        </div>
                         <div class="trash-interface__answer trash-answer js-notification">
                             <span class="trash-answer__notification is-right js-notification__right">
                                 <img
